WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
229078
Unprefix -webkit-box-decoration-break
https://bugs.webkit.org/show_bug.cgi?id=229078
Summary
Unprefix -webkit-box-decoration-break
Sam Sneddon [:gsnedders]
Reported
2021-08-13 10:36:28 PDT
Not immediately clear to me what this is actually blocked on? Maybe we can just go ahead and unprefix with an alias?
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-20 10:37:21 PDT
<
rdar://problem/82176202
>
Antoine Quint
Comment 2
2022-03-08 08:45:08 PST
Ideally this would add animation support for this property in CSSPropertyAnimation. See the many uses of DiscretePropertyWrapper, this will likely be a one-liner.
Tim Nguyen (:ntim)
Comment 3
2022-04-28 09:14:57 PDT
According to MDN, WebKit only supports this for inline elements (like Chrome).
Karl Dubost
Comment 4
2023-01-05 05:20:36 PST
https://wpt.fyi/results/css/css-break?label=master&label=experimental&aligned&view=subtest&q=box-decoration-break
https://searchfox.org/wubkat/rev/f78fd4847fdb47a9159a81e971c8b2af61d8d197/Source/WebCore/animation/CSSPropertyAnimation.cpp#3555-3557
Karl Dubost
Comment 5
2023-08-24 01:49:06 PDT
So I was wondering the same. I have made a patch which solves the parsing but doesn't solve test 1, 2, and 4.
https://wpt.fyi/results/css/css-break?label=master&label=experimental&aligned&q=safari%3Afail%20box-decoration-break
Let's see if they are more things we could do about it.
Karl Dubost
Comment 6
2023-08-24 01:56:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17007
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug