Unprefix -webkit-box-decoration-break https://bugs.webkit.org/show_bug.cgi?id=229078 rdar://82176202

Reviewed by NOBODY (OOPS!).

This is unprefixing -webkit-box-decoration-break. But it also keeps
-webkit-box-decoration-break as an alias, as there is a lot of usage
online with the prefixed version.
https://chromestatus.com/metrics/css/timeline/popularity/414
Probably an additional work would be to remove the prefixed version
from WPT tests and extends the tests if necessary.
https://github.com/web-platform-tests/interop/issues/486

* LayoutTests/fast/box-decoration-break/box-decoration-break-parsing-expected.txt:
* LayoutTests/fast/box-decoration-break/box-decoration-break-parsing.html:
* LayoutTests/fast/css/getComputedStyle/computed-style-expected.txt:
* LayoutTests/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* LayoutTests/fast/css/getComputedStyle/resources/property-names.js:
* LayoutTests/imported/w3c/web-platform-tests/css/css-break/inheritance-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-break/parsing/box-decoration-break-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-break/parsing/box-decoration-break-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt: Removed.
* LayoutTests/platform/ipad/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt: Removed.
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/svg/css/getComputedStyle-basic-expected.txt:
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const):
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::conservativelyCollectChangedAnimatableProperties const):
* Source/WebInspectorUI/UserInterface/Models/CSSKeywordCompletions.js: